add CI pipeline

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author = Mara contributors
 license = MIT
 
 [options]
-packages = cron
+packages = mara_cron
 python_requires = >= 3.6
 install_requires =
     mara-page>=1.5.2
