add click group command, add entry_point mara.commands

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,7 @@ test =
 
 [options.package_data]
 mara_cron = **/*.py
+
+[options.entry_points]
+mara.commands =
+    cron = mara_cron.cli:mara_cron
