--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,12 @@ license = MIT
 
 [options]
 packages = mara_cron
-python_requires = >= 3.6
+python_requires = >= 3.7
 install_requires =
     mara-page>=1.5.2
     python-crontab>=2.5.1
     click>=7.1.2
+    mara-cli>=0.3.1
 
 [options.extras_require]
 test =
